#pragma once
#include "Texture.h"
#include <atltypes.h>
#include <memory>

struct Sprite
{
	float m_DrawX;
	float m_DrawY;
	float m_MoveX;
	float m_MoveY;
};

